# whittle

./: .editorconfig  .env.local.example  .gitignore  AGENTS.md  README.md  pyproject.toml  skills-lock.json
.agents/skills/logfire-query/: SKILL.md
.github/: pull_request_template.md
assets/legacy_box_quadcopter/: README.md
assets/legacy_box_quadcopter/triSurface/: drone_model_box__prop_br.stl  drone_model_box__prop_fl.stl
backend/: .env.example
docs/context/: overview.md  physics-envelope.md  schema-guide.md
docs/decisions/: 0000-template.md
docs/job-applications/: README.md  anima.md  beyondmath.md  physicsx.md
docs/planning/: brainstorm-backlog.md  current-plan.md  interview-sprint-plan.md  v0-openfoam-case-writer.md
docs/runbooks/: dev-setup.md  public-release-checklist.md
examples/: agent_demo_request.md  drone_external_10ms.txt  planning_eval_cases.json
frontend/: .env.local.example  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/tests/: whittle-ui-smoke.spec.ts
src/whittle/: __init__.py  cli.py  observability.py
src/whittle/agents/: __init__.py  cfd_planning_agent.py  prompt_loader.py
src/whittle/api/: __init__.py  app.py
src/whittle/evals/: __init__.py  (+1 more)
tests/: test_api_app.py  test_attitude_suite.py  test_case_writer.py  test_cfd_planning_agent.py  test_geometry_presets.py  test_performance_guidance.py  test_physics_envelope.py  test_planning_evals.py  test_prompt_loader.py  test_scenario_planner.py  test_stl_tools.py  test_transforms.py  test_validation.py  test_wsl_runner.py
(+23 files in other folders)
